5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3991/executions/1573_1332.log
== TEST (2019-03-13 14:18:08) 
-- CODE:
aresta = 5
area = A

print(round(3/2*(3**0.5)*5**, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3**0.5)*5**, 4))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:41) 
-- CODE:
aresta = 5
area = A

print(round(3/2*(3**0.5)*5**, 4)):
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3**0.5)*5**, 4)):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:20:00) 
-- CODE:
aresta = 5
area = A

print(round(3/2*(3 ** 0.5)*5**, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3 ** 0.5)*5**, 4))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:20:55) 
-- CODE:
aresta = 5
area = A

print(round(3/2* 3 ** 0.5*5**, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2* 3 ** 0.5*5**, 4))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:22:14) 
-- CODE:
aresta = 5
area = A

print(round(3/2* (3 ** 0.5)* 5**, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2* (3 ** 0.5)* 5**, 4))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:22:48) 
-- CODE:
aresta = 5
area = A

print(round(3/2*(3 ** 0.5)* 5**, 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3 ** 0.5)* 5**, 4))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
